完成多值插入

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ m4/lt~obsolete.m4
 # Build artifacts
 #==============================================================================#
 #m4/
+deps/
 build/
 #*.m4
 *.o
