fix no data in where clause when encounter invalid date

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ build/
 *.pdf
 *.swp
 a.out
+observer.log.*
 
 #==============================================================================#
 # Kate Swap Files
